@@ -28,6 +28,7 @@ $ -> Language fix or change
 
 25-Mar-2013 Michael Babker
  +# Test JTableContenttype, fix bugs found in class
+ +# Start testing JTags
 
 05-Mar-2013 Mark Dexter
  # Fix system tests for tags component and modules
